--- a/index.htm
+++ b/index.htm
@@ -304,8 +304,8 @@
                         </h1>
                     </div>
                     <div class="col-md-4 text-right-md pull-right">
-                        <a href="#" class="btn btn-theme btn-theme-lg btn-theme-transparent-grey pull-right"
-                           data-animation="flipInY" data-animation-delay="300"><i class="fa fa-print"></i> Download Schedule</a>
+                        <a href="http://arista.kgkite.ac.in/img/rm.jpg" class="btn btn-theme btn-theme-lg btn-theme-transparent-grey pull-right"
+                           data-animation="flipInY" data-animation-delay="300"><i class="fa fa-print"></i>Campus Map</a>
                     </div>
                 </div>
 
