--- a/index.htm
+++ b/index.htm
@@ -881,7 +881,7 @@
                 </div>
 				<div class="text-center margin-top">
                     <a data-animation="flipInY" data-animation-delay="500" class="btn btn-theme animated"><i class="fa fa-thumbs-up"></i> OUR CO-SPONSORs</a>
-				<br><br>	<div><img src="sponsor/aircel.png" alt=""><img src="sponsor/chennai.png" alt=""><a href="http://www.uniqtechnologies.co.in/"><img src="sponsor/uniq.png" alt=""></a></div><div><img src="sponsor/bvc.jpg" alt=""><img src="sponsor/kg.png" alt=""></div>
+				<br><br>	<div><img src="sponsor/aircel.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsor/chennai.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.uniqtechnologies.co.in/"><img src="sponsor/uniq.png" alt=""></a></div><div><img src="sponsor/bvc.jpg" alt="">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsor/kg.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsor/utv.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsor/aa.png" alt=""></div>
 					
                 </div>
                 <div class="text-center margin-top">
