--- a/events.htm
+++ b/events.htm
@@ -426,19 +426,20 @@ Contact: <b>Email : </b>game@arista14.com
  <div id="Quiz" class="modalDialog">
 <div>
 		<a href="#close" title="Close" class="close">X</a>
-		<center><h2>Quiz Rules</h2></center><br>
-1.Teams can be framed with a maximum of two members.<br>
-2.There will be a total of two rounds.
-3.Questions will be both technical and non-technical.<br>
-4.It will be conducted for 30 minutes and there is no negative points.<br>
-5.Three teams will be selected for the finals.<br>
-6.In the finals each team has to compete with the other 2 teams in 3 rounds.<br>
-8.The decisions of the judges will be final.<br
+		<center><h2>Quiz Rules</h2></center>
+		<p><br>
+		  1.Teams can be framed with a maximum of two members.<br>
+		  2.There will be a total of two rounds.<br>3.Questions will be both technical and non-technical.<br>
+		  4.It will be conducted for 30 minutes and there is no negative points.<br>
+		  5.Three teams will be selected for the finals.<br>
+		  6.In the finals each team has to compete with the other 2 teams in 3 rounds.<br>
+		  8.The decisions of the judges will be final.<br>
+          9.A team should have two members<br>
 &nbsp;&nbsp;&nbsp;&nbsp;Registration fee: Rs.250/- per team<br>
-&nbsp;&nbsp;&nbsp;&nbsp;First prize : Rs.3,000/-&nbsp;&nbsp;&nbsp;&nbsp;Second prize : Rs.2,000/-<br>
-Contact: <b>Email : </b>quiz@arista14.com
-
-<p><center><a href="index.htm#register" class="btn">Register</a></center></p>	
+  &nbsp;&nbsp;&nbsp;&nbsp;First prize : Rs.3,000/-&nbsp;&nbsp;&nbsp;&nbsp;Second prize : Rs.2,000/-<br>
+		  Contact: <b>Email : </b>quiz@arista14.com
+    </p>
+	<p><center><a href="index.htm#register" class="btn">Register</a></center></p>	
 </div>
 </div>
 <!--quiz-->
