--- a/index.htm
+++ b/index.htm
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <!-- saved from url=(0029)http://eazzy.me/html/imevent/ -->
-<html lang="en" class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style type="text/css">.gm-style .gm-style-mtc label,.gm-style .gm-style-mtc div{font-weight:400}</style><style type="text/css">.gm-style .gm-style-cc span,.gm-style .gm-style-cc a,.gm-style .gm-style-mtc div{font-size:10px}</style><link type="text/css" rel="stylesheet" href="./im Event_files/css"><style type="text/css">@media print {  .gm-style .gmnoprint, .gmnoprint {    display:none  }}@media screen {  .gm-style .gmnoscreen, .gmnoscreen {    display:none  }}</style><style type="text/css">.gm-style{font-family:Roboto,Arial,sans-serif;font-size:11px;font-weight:400;text-decoration:none}</style>
+<html lang="en" class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style type="text/css">.gm-style .gm-style-mtc label,.gm-style .gm-style-mtc div{font-weight:400}</style><style type="text/css">.gm-style .gm-style-cc span,.gm-style .gm-style-cc a,.gm-style .gm-style-mtc div{font-size:10px}</style><link type="text/css" rel="stylesheet" href="./im Event_files/css"><style type="text/css">@media print {  .gm-style .gmnoprint, .gmnoprint {    display:none  }}@media screen {  .gm-style .gmnoscreen, .gmnoscreen {    display:none  }}</style><style type="text/css">.gm-style{font-family:Roboto,Arial,sans-serif;
+rj {
+    text-shadow: 5px 5px 5px #FF0000;
+}
+</style>
     <meta charset="utf-8">
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Arista'14</title>
 
     <!-- Favicons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://eazzy.me/html/imevent/assets/ico/apple-touch-icon-144-precomposed.png">
@@ -71,6 +74,7 @@
                     <li class="active"><a href="#home">Home</a></li>
                     
                      <li><a href="events.htm">Events</a></li>
+                      <li><a href="events.htm#rjbalaji"><rj>Mr'n'Ms Arista</rj></a></li>
                      <li><a href="#about">About</a></li>
                     <li><a href="#schedule">Schedule</a></li>
                     <li><a href="#sponsors">Sponsors</a></li>
@@ -881,7 +885,7 @@
                 </div>
 				<div class="text-center margin-top">
                     <a data-animation="flipInY" data-animation-delay="500" class="btn btn-theme animated"><i class="fa fa-thumbs-up"></i> OUR CO-SPONSORs</a>
-				<br><br>	<div><img src="sponsor/aircel.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsor/chennai.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.uniqtechnologies.co.in/"><img src="sponsor/uniq.png" alt=""></a></div><div><img src="sponsor/bvc.jpg" alt="">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsor/kg.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsor/utv.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsor/aa.png" alt=""></div>
+				<br><br>	<div><img src="sponsor/aircel.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsor/chennai.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.uniqtechnologies.co.in/"><img src="sponsor/uniq.png" alt=""></a></div><div><img src="sponsor/bvc.jpg" alt="">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsor/kg.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsor/utv.png" alt=""><img src="sponsor/aa.png" alt=""></div>
 					
                 </div>
                 <div class="text-center margin-top">
