--- a/index.htm
+++ b/index.htm
@@ -91,7 +91,7 @@ rj {
         </div>
     </header>
     <!-- /HEADER -->
-
+<marquee> Arista Event <a href="#schedule">schedule</a> updated! || Mr'n'Ms Arista participants should be present on SEP 11 || Submissions for paper presentation are closed || Stay connected with us at <a href="http://www.fb.com/arista14">Arista facebook page</a> !</marquee>
     <!-- Content area -->
     <div class="content-area">
 
